# quiz-creator

./: Button.cpp  Button.h  CMakeLists.txt  Essay_Question.cpp  Essay_Question.h  Match_Question.cpp  Match_Question.h  Multiple_Answer_Question.cpp  Multiple_Answer_Question.h  New_Quiz.cpp  New_Quiz.h  Question.cpp  Question.h  README.md  Single_Answer_Question.cpp  Single_Answer_Question.h  TextBox.cpp  TextBox.h  True_Or_False_Question.cpp  True_Or_False_Question.h  Type_in_Question.cpp  Type_in_Question.h  main.cpp
